# code-crafters-http-rs

./: .gitignore  Cargo.toml  README.md  potato  tarpaulin-report.html  test.txt
src/: async_function_pointers_demo.rs  core.rs  error.rs  example_server.rs  file_handler.rs  lib.rs  main.rs  prelude.rs  request.rs
src/callback/: asynchronous.rs  mod.rs  synchronous.rs
src/core/: context.rs  handler.rs  request.rs  response.rs  route_table.rs  route_trie.rs  router.rs  routing.rs
src/example_server/: context.rs  file_handler.rs  routes.rs
src/example_server/routes/: async_test.rs  echo.rs  files.rs  index.rs  user_agent.rs
src/http/: headers.rs  method.rs  mod.rs  path.rs  request.rs  version.rs
src/matching/: identifiers.rs
src/routes/: index.rs
tests/: callback.rs  request.rs
