# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "http-routing-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
anyhow = "1.0.59"                                   # error handling
bytes = "1.3.0"                                     # helps manage buffers
# thiserror = "1.0.38"                                # error handling
nom = "7.1.3"                                       # parser combinators
itertools = "0.11.0"                                # General iterator helpers
futures = "0.3"
lazy_static = "1.4.0"
derive_more = {version = "1.0.0-beta", features = ["from", "display"]}

[dev-dependencies]
pretty_assertions = "1.3.0"                         # nicer looking assertions
anyhow = "1.0.59"                                   # error handling


[dependencies.async-std]
version = "1.12.0"
features = ["attributes"]

[[bin]]
name = "function_pointer_demo"
path = "src/async_function_pointers_demo.rs"

[[bin]]
name = "demo_server"
path = "src/async_function_pointers_demo.rs"

[lib]
name = "http_routing_rust"
path = "src/lib.rs"